[gd_scene load_steps=14 format=3 uid="uid://ccslpusk1rxc8"]

[ext_resource type="Script" uid="uid://bo8khh1udr4c2" path="res://level objects/Enemies/bosses/boss_template.gd" id="1_wbgtx"]
[ext_resource type="Script" uid="uid://c21fn48h6wrix" path="res://level objects/Enemies/baddy_collison.gd" id="2_r3qmr"]
[ext_resource type="Texture2D" uid="uid://dymgw8u1rcveg" path="res://sprite/effects/shock_sign.png" id="5_5bcx7"]
[ext_resource type="Texture2D" uid="uid://caph8sh5tfrjd" path="res://sprite/effects/shock_wave.png" id="6_lij31"]
[ext_resource type="AudioStream" uid="uid://bvm1dgob6io56" path="res://sounds/sound effects/Baddies/KritterHurt_1.wav" id="6_m6hog"]
[ext_resource type="AudioStream" uid="uid://dsn3p7l8ghkkd" path="res://sounds/sound effects/enivornment/flashback.wav" id="7_lij31"]
[ext_resource type="Texture2D" uid="uid://c2wtvnci8h7p8" path="res://sprite/Baddies/boss_attacks/egg_splat.png" id="7_x5uft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhnte"]
size = Vector2(31.0625, 36.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow2ej"]
size = Vector2(66, 77)

[sub_resource type="Animation" id="Animation_0jgbt"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("egg_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hit_flash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shocked_point:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7rfb2"]
resource_name = "egged"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("egg_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hit_flash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5bcx7"]
resource_name = "hit"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit_flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("shocked_point:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1k2qp"]
_data = {
&"RESET": SubResource("Animation_0jgbt"),
&"egged": SubResource("Animation_7rfb2"),
&"hit": SubResource("Animation_5bcx7")
}

[node name="boss" type="CharacterBody2D" groups=["baddies"]]
z_index = 1
collision_layer = 3
collision_mask = 3
input_pickable = true
script = ExtResource("1_wbgtx")
hit_speed = 0.0

[node name="shoot_area" type="Area2D" parent="."]
script = ExtResource("2_r3qmr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="shoot_area"]
position = Vector2(-0.5, 1.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lhnte")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, 1.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_lhnte")

[node name="nearby_dector" type="Area2D" parent="." groups=["baddies"]]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="nearby_dector"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_ow2ej")

[node name="Timers" type="Node" parent="."]

[node name="change_direction_timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
autostart = true

[node name="stun_timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 3.0

[node name="invulnerable_timer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="Sounds" type="Node" parent="."]

[node name="baddy_sound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("6_m6hog")
bus = &"Sfx"

[node name="power_up" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_lij31")
volume_db = 2.0
bus = &"Sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_1k2qp")
}

[node name="shocked_point" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(2, -38)
scale = Vector2(1.3475, 1.3475)
texture = ExtResource("5_5bcx7")

[node name="hit_flash" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(-1.05954, 1.05804)
scale = Vector2(1.03125, 1.03125)
texture = ExtResource("6_lij31")

[node name="egg_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(2, -15)
texture = ExtResource("7_x5uft")

[connection signal="mouse_entered" from="shoot_area" to="." method="_on_shoot_area_mouse_entered"]
[connection signal="mouse_exited" from="shoot_area" to="." method="_on_shoot_area_mouse_exited"]
[connection signal="area_entered" from="nearby_dector" to="." method="_on_nearby_dector_area_entered"]
[connection signal="timeout" from="Timers/change_direction_timer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="timeout" from="Timers/stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="Timers/invulnerable_timer" to="." method="_on_invulnerable_timer_timeout"]
